# Amazon-Inventory-Template-Converter

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
examples/: README.md
src/aitc/: cli.py  converter.py  mappings.py
src/amazon_inventory_template_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_smoke.py
