[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-inventory-template-converter"
version = "0.2.0"
description = "Convert Amazon Inventory Excel templates (RING Template sheet) into Mongo-friendly JSON"
readme = "README.md"
authors = [{name="Ridley Tools"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["pandas>=2.2.0", "openpyxl>=3.1.2"]

[project.scripts]
aitc = "aitc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
